--- a/index.html
+++ b/index.html
@@ -46,10 +46,80 @@
 
     <main>
       <!--  featured bike in this year -->
-      <section class="m-4">
+      <section class="m-4 text-center">
         <h1 class="text-4xl">Featured Bikes In This Year</h1>
-        <p>Best Bike Collection</p>
+        <p class="text-orange-700">Best Bike Collection</p>
+        <div class="flex justify-center">
+          <hr class="w-1/2 border-t-2 border-orange-300" />
+        </div>
+        <div class="featured_bikes flex flex-row">
+          <img src="./images/slider/bike2.png" alt="" />
+          <img src="./images//slider/bike1.png" alt="" />
+          <img src="./images//slider/bike4.png" alt="" />
+        </div>
       </section>
+
+      <!-- latest news -->
+      <section class="latest-cards m-5 mt-10">
+        <h1 class="text-5xl text-center mb-10">Latest News</h1>
+        <!-- parent div -->
+        <div class="cards flex gap-4">
+          <div
+            class="card card-compact bg-base-100 w-96 shadow-xl border-2 border-sky-500"
+          >
+            <figure>
+              <img src="./images/slider/bike1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum,
+                repellat.
+              </p>
+              <div class="card-actions justify-start">
+                <button class="btn btn-primary text-white">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card card-compact bg-base-100 w-96 shadow-xl border-2 border-sky-500"
+          >
+            <figure>
+              <img src="./images/slider/bike2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl">Motorcycles & Scooters</h2>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum,
+                repellat.
+              </p>
+              <div class="card-actions justify-start">
+                <button class="btn btn-outline btn-error">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card card-compact bg-base-100 w-96 shadow-xl border-2 border-sky-500"
+          >
+            <figure>
+              <img src="./images/slider/bike3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl">2021 Honda CBR500R</h2>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum,
+                repellat.
+              </p>
+              <div class="card-actions justify-start">
+                <button class="btn btn-outline btn-error">Read More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- happy Client says -->
+      <section></section>
     </main>
   </body>
 </html>
