--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
     <main>
       <!--  featured bike in this year -->
-      <section class="m-4 text-center">
+      <section class="text-center">
         <h1 class="text-4xl">Featured Bikes In This Year</h1>
         <p class="text-orange-700">Best Bike Collection</p>
         <div class="flex justify-center">
           <hr class="w-1/2 border-t-2 border-orange-300" />
         </div>
-        <div class="featured_bikes flex flex-row">
+        <div class="featured_bikes flex flex-col md:flex-row lg:flex-row">
           <img src="./images/slider/bike2.png" alt="" />
           <img src="./images//slider/bike1.png" alt="" />
           <img src="./images//slider/bike4.png" alt="" />
@@ -63,7 +63,7 @@
       <section class="latest-cards m-5 mt-10">
         <h1 class="text-5xl text-center mb-10">Latest News</h1>
         <!-- parent div -->
-        <div class="cards flex gap-4">
+        <div class="cards flex flex-col md:flex-row lg:flex-row gap-4">
           <div
             class="card card-compact bg-base-100 w-96 shadow-xl border-2 border-sky-500"
           >
@@ -119,7 +119,103 @@
       </section>
 
       <!-- happy Client says -->
-      <section></section>
+      <section class="m-4">
+        <h1 class="text-5xl text-center">
+          Happy <span class="text-5xl text-orange-700">Clients Says</span>
+        </h1>
+        <div
+          class="client_cards flex flex-col md:flex-row xl:flex-row gap-6 mt-5 mb-5"
+        >
+          <div
+            class="card border-solid border-2 white card-compact bg-base-100 w-96 shadow-xl"
+          >
+            <figure>
+              <img
+                class="w-36 h-36 mt-2"
+                src="./images/others/user-1.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="flex flex-row justify-center">
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-regular.svg" alt="" />
+              </div>
+              <div class="card-actions flex flex-col items-center">
+                <h1 class="text-cyan-300">Regina Miles</h1>
+
+                <h1>Banker</h1>
+              </div>
+            </div>
+          </div>
+          <!-- client number 2 -->
+          <div
+            class="card border-solid border-2 white card-compact bg-base-100 w-96 shadow-xl"
+          >
+            <figure>
+              <img
+                class="w-36 h-36 mt-2"
+                src="./images/others/user-2.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="flex flex-row justify-center">
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-regular.svg" alt="" />
+              </div>
+              <div class="card-actions flex flex-col items-center">
+                <h1 class="text-cyan-300">Regina Miles</h1>
+
+                <h1>Banker</h1>
+              </div>
+            </div>
+          </div>
+          <div
+            class="card border-solid border-2 white card-compact bg-base-100 w-96 shadow-xl"
+          >
+            <figure>
+              <img
+                class="w-36 h-36 mt-2"
+                src="./images/others/user-3.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="flex flex-row justify-center">
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-solid.svg" alt="" />
+                <img class="w-5" src="./images/icons/star-regular.svg" alt="" />
+              </div>
+              <div class="card-actions flex flex-col items-center">
+                <h1 class="text-cyan-300">Regina Miles</h1>
+
+                <h1>Banker</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
